...
        android:rotation="45"
        android:src="@drawable/ic_round_add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- Title -->
    <EditText
        android:id="@+id/titleEdt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_rounded_yellow_light"
        android:fontFamily="@font/almarai_light"
        android:hint="@string/title"
...
                    android:layout_gravity="center_vertical" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- Save -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveTask"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:fontFamily="@font/almarai_light"
        android:paddingHorizontal="50dp"
        android:text="@string/save"
        android:textColor="@color/white"
...
