...
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tasksToolbar" />

    <!-- Add note -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addTaskBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_round_add_24"
        app:backgroundTint="@color/aqua"
        app:layout_constraintBottom_toBottomOf="parent"
...
